--- a/src/CompanyDatabaseUI/App.axaml
+++ b/src/CompanyDatabaseUI/App.axaml
@@ -10,6 +10,7 @@
     </Application.DataTemplates>
   
     <Application.Styles>
-        <FluentTheme />
+        <StyleInclude Source="avares://Semi.Avalonia/Themes/Index.axaml" />
+        <StyleInclude Source="avares://Semi.Avalonia.DataGrid/Index.axaml" />
     </Application.Styles>
 </Application>
