--- a/src/CompanyDatabaseUI/Views/DashboardView.axaml
+++ b/src/CompanyDatabaseUI/Views/DashboardView.axaml
@@ -1,4 +1,4 @@
-<Window xmlns="https://github.com/avaloniaui"
+<UserControl xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="using:CompanyDatabaseUI.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,9 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
         Width="1200" Height="800"
         x:Class="CompanyDatabaseUI.Views.DashboardView"
-        x:DataType="vm:DashboardViewModel"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="CompanyDatabaseUI">
+        x:DataType="vm:DashboardViewModel">
 
     <StackPanel>
         
@@ -47,9 +45,7 @@
                                             Binding="{Binding Name}"/>
                     </DataGrid.Columns>
                 </DataGrid>
-                
             </StackPanel>
         </Grid>
     </StackPanel>
-
-</Window>
+</UserControl>
