--- a/src/CompanyDatabaseUI/App.axaml
+++ b/src/CompanyDatabaseUI/App.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="CompanyDatabaseUI.App"
              xmlns:local="using:CompanyDatabaseUI"
-             RequestedThemeVariant="Default">
+             RequestedThemeVariant="Light">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
