--- a/src/CompanyDatabaseUI/Views/LoginView.axaml
+++ b/src/CompanyDatabaseUI/Views/LoginView.axaml
@@ -81,7 +81,9 @@
                         Command="{Binding LoginCommand}"
                         Margin="20"
                         Height="45"
-                        CornerRadius="12"/>    
+                        CornerRadius="12"/>
+                <!--Status Message-->
+                <TextBlock Text="{Binding}"/>
             </StackPanel>
         </Border>
         
