--- a/src/CompanyDatabaseUI/Views/CEODashboardView.axaml
+++ b/src/CompanyDatabaseUI/Views/CEODashboardView.axaml
@@ -6,22 +6,96 @@
              x:DataType="vm:CEODashboardViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="CompanyDatabaseUI.Views.CEODashboardView">
-    <StackPanel>
-        <TextBlock Text="{Binding CustomerTotal}"
-                   Margin="20,5"
-                   FontSize="50"
-                   FontWeight="Bold"/>
-                
-        <DataGrid ItemsSource="{Binding CustomerList}"
-                  Margin="20,5"
-                  IsReadOnly="True"
-                  Height="500"
-                  HorizontalAlignment="Left"
-                  VerticalAlignment="Center"
-                  ColumnWidth="*"
-                  GridLinesVisibility="All"
-                  BorderThickness="1"
-                  BorderBrush="Gray">
-        </DataGrid>
-    </StackPanel>
+    <ScrollViewer>
+        <StackPanel Margin="50,10">
+            <!--Header-->
+            <Border HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    BorderThickness="4"
+                    CornerRadius="20"
+                    BorderBrush="CornflowerBlue">
+                <TextBlock Text="CEO Dashboard"
+                           Margin="20,5"
+                           FontSize="50"
+                           FontWeight="Bold"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"/>
+            </Border>
+            <!--Customer Table-->
+            <TextBlock Text="{Binding CustomerTotal}"
+                       Margin="20,5"
+                       FontSize="50"
+                       FontWeight="Bold"/>
+                    
+            <DataGrid ItemsSource="{Binding CustomerList}"
+                      Margin="20,5"
+                      IsReadOnly="True"
+                      Height="500"
+                      HorizontalAlignment="Left"
+                      VerticalAlignment="Center"
+                      ColumnWidth="*"
+                      GridLinesVisibility="All"
+                      BorderThickness="1"
+                      BorderBrush="Gray">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Name"
+                                        Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="City"
+                                        Binding="{Binding City}"/>
+                    <DataGridTextColumn Header="Country"
+                                        Binding="{Binding Country}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <!--Order Table-->
+            <TextBlock Text="{Binding OrderTotal}"
+                       Margin="20,5"
+                       FontSize="50"
+                       FontWeight="Bold"/>
+                    
+            <DataGrid ItemsSource="{Binding OrderList}"
+                      Margin="20,5"
+                      IsReadOnly="True"
+                      Height="500"
+                      HorizontalAlignment="Left"
+                      VerticalAlignment="Center"
+                      ColumnWidth="*"
+                      GridLinesVisibility="All"
+                      BorderThickness="1"
+                      BorderBrush="Gray">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="OrderID"
+                                        Binding="{Binding OrderId}"/>
+                    <DataGridTextColumn Header="EmployeeID"
+                                        Binding="{Binding EmployeeId}"/>
+                    <DataGridTextColumn Header="CustomerID"
+                                        Binding="{Binding CustomerId}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <!--Employee Table-->
+            <TextBlock Text="{Binding EmployeeTotal}"
+                       Margin="20,5"
+                       FontSize="50"
+                       FontWeight="Bold"/>
+                    
+            <DataGrid ItemsSource="{Binding EmployeeList}"
+                      Margin="20,5"
+                      IsReadOnly="True"
+                      Height="500"
+                      HorizontalAlignment="Left"
+                      VerticalAlignment="Center"
+                      ColumnWidth="*"
+                      GridLinesVisibility="All"
+                      BorderThickness="1"
+                      BorderBrush="Gray">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Name"
+                                        Binding="{Binding FirstName}"/>
+                    <DataGridTextColumn Header="City"
+                                        Binding="{Binding LastName}"/>
+                    <DataGridTextColumn Header="Country"
+                                        Binding="{Binding Title}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
